--- a/.github/workflows/docker-image-sync.yml
+++ b/.github/workflows/docker-image-sync.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: 登录到腾讯云 Coding 镜像仓库
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ${{ secrets.CODING_REGISTRY }}
           username: ${{ secrets.CODING_USERNAME }}
@@ -36,7 +36,7 @@ jobs:
             echo "处理镜像: $image"
             
             # 拉取镜像
-            docker pull $image
+            docker pull $image || exit 1
             
             # 解析镜像名称和标签
             IFS=':' read -r name tag <<< "$image"
