--- a/.github/workflows/docker-image-sync.yml
+++ b/.github/workflows/docker-image-sync.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: 设置 Docker Buildx
-        uses: docker/setup-buildx-action@v2  # 升级到 v2 版本
+        uses: docker/setup-buildx-action@v2
 
       - name: 登录到腾讯云 Coding 镜像仓库
         uses: docker/login-action@v2
@@ -62,4 +62,4 @@ jobs:
             docker push $target_image
             
             echo "镜像 $image 同步完成，已推送到 $target_image"
-          done < images.txt
+          done < images.txt    
