--- a/.github/workflows/docker-image-sync.yml
+++ b/.github/workflows/docker-image-sync.yml
@@ -27,39 +27,47 @@ jobs:
           password: ${{ secrets.CODING_PASSWORD }}
 
       - name: 读取镜像列表并同步
+        id: sync_images_step
         run: |
           # 读取 images.txt 文件中的镜像列表
           while IFS= read -r image || [[ -n "$image" ]]; do
             # 跳过空行和注释行
             [[ -z "$image" || "$image" =~ ^#.*$ ]] && continue
-            
+
             echo "处理镜像: $image"
-            
+
             # 拉取镜像
             docker pull $image || exit 1
-            
+
             # 解析镜像名称和标签
             IFS=':' read -r name tag <<< "$image"
-            
+
             # 处理可能包含额外层级的镜像名称
             IFS='/' read -r org repo <<< "$name"
             if [ -z "$repo" ]; then
               repo=$org
               org=""
             fi
-            
+
             # 构建目标镜像名称（确保使用三级目录结构）
             if [ -z "$org" ]; then
               target_image="${CODING_REGISTRY}/${CODING_NAMESPACE}/${repo}:${tag}"
             else
               target_image="${CODING_REGISTRY}/${CODING_NAMESPACE}/${org}-${repo}:${tag}"
             fi
-            
+
+            # 调试输出完整的 target_image
+            echo "完整的 target_image: $target_image"
+
             # 标记镜像
             docker tag $image $target_image
-            
+
             # 推送镜像到腾讯云 Coding
             docker push $target_image
-            
+
             echo "镜像 $image 同步完成，已推送到 $target_image"
-          done < images.txt    
+            echo "::set-output name=target_image::$target_image"
+          done < images.txt
+
+      - name: 展示完整镜像 URL
+        run: echo "完整的镜像 URL: ${{ steps.sync_images_step.outputs.target_image }}"
